# gomoku

./: Cargo.toml  README.md
benches/: test.rs
src/: algo.rs  board.rs  color.rs  config.rs  error.rs  heuristic.rs  leakser.rs  main.rs  matching_cases.rs  opening_move.rs  parser.rs  players.rs  view.rs
