[package]
name = "gomoku"
version = "0.1.0"
authors = ["Gaspard Legendre <glegendr@student.42.fr>", "Lorenzo Jesu <lojesu@student.42.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.1"
piston2d-graphics = "0.41.0"
piston2d-opengl_graphics = "0.79.0"
pistoncore-glutin_window = "0.69.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "test"
harness = false
